--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "eslint": "^4.19.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9"
   },
   "dependencies": {
     "express": "^4.16.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
-    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
