--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.12.1",
     "express": "^4.16.0",
     "jsonwebtoken": "^8.4.0",
+    "mag": "^0.9.1",
     "mongoose": "^5.4.1",
     "prettier": "^1.15.3"
   },
